Name:                sunroof-th
Version:             0.2.1
Synopsis:            Monadic Javascript Compiler - Template Haskell Utilities
Homepage:            https://github.com/ku-fpg/sunroof-th
Bug-reports:         https://github.com/ku-fpg/sunroof-th
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>, Jan Bracker <jbra@informatik.uni-kiel.de>
Maintainer:          Jan Bracker <jbra@informatik.uni-kiel.de>
Copyright:           (c) 2012 The University of Kansas
Category:            Web, Language, Embedded, Javascript
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  Utilities to use template Haskell with Sunroof to generate boilerplate code.

Extra-source-files:
    README.md

Library
  Exposed-modules:     Language.Sunroof.TH
                       
  default-language:    Haskell2010
  build-depends:       base             >= 4.3.1 && < 5,
                       Boolean          >= 0.2,
                       template-haskell >= 2.8,
                       sunroof-compiler >= 0.2.1

  GHC-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/ku-fpg/sunroof-th.git
